[package]
name = "modplayer"
version = "0.1.0"
edition = "2021"
authors = ["polyzium"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
sdl2 = "0.37.0"
clap = { version = "4.0.15", features = ["derive"] }
anyhow = "1.0.95"

[dev-dependencies]
ctrlc = "3.2.3"

[features]
s3m = []
sdl2_audio = []